--- a/index.html
+++ b/index.html
@@ -2,6 +2,39 @@
 <html lang="en">
       <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content=""
+        <meta name="viewport" content="width=device-width, inital-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+        <link rel="stylesheet" href="style.css">
+        <title>Portfolio Website</title>
       </head>
+      <body>
+        <header>
+            <a href="#" class="logo">Utkarsh</a>
+
+            <nav>
+                <a href="#" class="active"> Home</a>
+                <a href="#" >Services</a>
+                <a href="#" >Skills</a>
+                <a href="#" >Education</a>
+                <a href="#" >Experience</a>
+                <a href="#" >Contact</a>
+            </nav>
+        </header>
+        <section class="home">
+          <div class="home-img">
+            <img src="download.jpg" alt="">
+          </div>
+          <div class="home-content">
+            <h1>Hi,It's <span>Utkarsh</span></h1>
+            <h3 class="typing-text">I'm a<span></span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur fugit unde impedit corrupti expedita quidem, laboriosam maiores voluptate? Ex debitis ea perspiciatis distinctio ipsum sunt officia aut optio reiciendis omnis.</p>
+            <div class="social-icons">
+              <a href="https://www.linkedin.com/in/utkarsh-anand-6442613a6/"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://github.com/UtkarshAnand-spunk"><i class="fa-brands fa-github"></i></a>
+              <a href="https://x.com/DepressTra23795"><i class="fa-brands fa-x-twitter"></i></a>
+            </div>
+            <a href="#" class="btn">Hire me</a>
+          </div>
+        </section>
+      </body>
 </html>
